# orbslam2_experiment

./: .gitignore  CMakeLists.txt  debug.txt  node_id.txt  span.txt
Cov/: cov.txt  ess.txt  kf_node.txt  spanning_tree.txt
Cov/drawgraph/: colorgraph.py  direction_graph.py  from_matrix.py  full_graph.py  no_direction_graph.py
Cov/graph/: creategraph.py  main.py  pp.py  showgraph.py
Examples/Monocular/: RealSense_D435i.yaml  TUM1.yaml  mono_tum.cc
Examples/RGB-D/: d435i.yaml  init_pose_graph.cpp  rgbd_realsense_D435i.cc  rgbd_tum.cc
Examples/ROS/ORB_SLAM2/: CMakeLists.txt
Examples/ROS/ORB_SLAM2/src/: ros_rgbd.cc
Examples/Stereo/: stereo_kitti.cc
Trajectory/rgbd/: CameraTrajectory.txt  posegraph.g2o  posegraph_no_error.g2o  test.cpp
Trajectory/stereo/: 00-full.txt  00-noloop.txt  05-full.txt  05-noloop.txt  CameraTrajectory.txt  no_loop_BA.txt  normal.txt
Trajectory/stereo/origin-ORB-SLAM2/: ori.txt
Trajectory/stereo/without_GBA_only/: CameraTrajectory.txt
estimate/: CMakeLists.txt  plot.py  plot_results2d.py
estimate/data/: posegraph_no_error.g2o
estimate/estimate/: convert_g2o_2d.cpp  convert_g2o_3d.cpp  plot.py  plot3d_curve.py  plot3d_scatter.py  plot_results2d.py  plot_results3d.py
estimate/result/g2o/: result_SE2_DL.g2o  result_SE2_GN.g2o  result_SE2_LM.g2o  result_SE3_DL.g2o  result_SE3_LM.g2o
estimate/result/txt/: 2D_after_DL.txt  2D_after_GN.txt  2D_after_LM.txt  2D_before_opt.txt
estimate/src/: pose_graph_g2o_SE2_DL.cpp  pose_graph_g2o_SE2_GN.cpp  pose_graph_g2o_SE2_LM.cpp  pose_graph_g2o_SE3_DL.cpp  pose_graph_g2o_SE3_GN.cpp  pose_graph_g2o_SE3_LM.cpp
include/: KeyFrame.h  LocalMapping.h  Map.h  ORBextractor.h  System.h
output_mvs/: sfm.txt
src/: Frame.cc  FrameDrawer.cc  KeyFrame.cc  LoopClosing.cc  Map.cc  Optimizer.cc  System.cc  Tracking.cc
